--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,20 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="./icon/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Aplikasi BetterBite - Data Diri" />
     <title>BetterBite</title>
+    
     <!-- Google Font jika diperlukan -->
-    <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@800&display=swap" rel="stylesheet" />
-    <!-- Favicon (opsional) -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <noscript>Anda perlu mengaktifkan JavaScript untuk melihat aplikasi ini.</noscript>
-    <div id="root"></div> <!-- Ini adalah root tempat React menempel -->
+    <div id="root"></div>
   </body>
 </html>
